Add JWT Support
